<resources>
    <string name="app_name">Android Subtitle Editor</string>
    <string name="shift_1s"><![CDATA[Shift < 1s]]></string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="_1s">1+</string>
    <string name="_0_1s">0.1+</string>
    <string name="ii">II</string>
    <string name="_0_1s_left">0.1-</string>
    <string name="_1s_left">1-</string>
    <string name="select_video">Select Video</string>
    <string name="open_file">Open File</string>
    <string name="video_player">Video Player</string>
    <string name="an_unknown_error_occurred">An unknown error occurred</string>
    <string name="no_subs_were_found_in_this_file">No subtitles were found in this file.</string>
    <string name="subtitle_main_menu">Subtitle Main Menu</string>
    <string name="view_subtitle">View Subtitle</string>
    <string name="advanced">Advanced</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="switchAudioTrack">Switch audio track</string>
    <string name="previous">Previous</string>
    <string name="rewind">Rewind</string>
    <string name="pause">Pause</string>
    <string name="fastForward">Fast Forward</string>
    <string name="next">Next</string>
    <string name="changeZoom">Change Zoom</string>
    <string name="fullScreenButton">Full screen button</string>
    <string name="logo">Logo</string>
    <string name="open_subtitle_locally">Open Subtitle Locally</string>
    <string name="open_subtitle_on_lan">Open Subtitle on LAN</string>
    <string name="jump_to_end">Jump to\nLast</string>
    <string name="jump_to_start">Jump to\nFirst</string>
    <string name="sync_this_subtitle_to">Sync this subtitle to:</string>
    <string name="current_first_subtitle">Selected first subtitle</string>
    <string name="current_last_subtitle">Selected last subtitle</string>
    <string name="choose_other">Choose\nOther</string>
    <string name="open_local_subtitle">Open local\nsubtitle</string>
    <string name="open_lan_subtitle">Open LAN\nSubtitle</string>
    <string name="sync">Sync</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="play">Play</string>
    <string name="view">View</string>
    <string name="individual_shift_not_possible">Shift not possible. Another line is present at this moment</string>
    <string name="delete">Delete</string>
    <string name="edit_text">Edit text</string>
    <string name="_0_1">-0.1</string>
    <string name="time">time</string>
    <string name="shift_single_line">Shift single line:</string>
    <string name="end_time">End time:</string>
    <string name="start_time">Start time:</string>
    <string name="_1">-1</string>
    <string name="save_overwrite">Save (overwrite)</string>
    <string name="save_with_edited_added">Save with _edited added</string>
    <string name="save_as_locally">Save as… (Locally)</string>
    <string name="save_as_lan">Save as.. (LAN)</string>
    <string name="no_subtitle_selected">No subtitle selected</string>
    <string name="no_video_selected">No video selected</string>
    <string name="current_video_directory">Current Video Directory:</string>
    <string name="current_subtitle_directory">Current Subtitle Directory:</string>
    <string name="first_select_a_subtitle">First select a subtitle to sync with</string>
    <string name="try_out_a_different_charset">Try out a different charset</string>
    <string name="browse_network">Browse Network</string>
    <string name="load_into_subtitle">Load into subtitle</string>
    <string name="error">Error</string>
    <string name="reload_subtitle">Reload\nsubtitle</string>
    <string name="set_time_as_start">Set time\nas start</string>
    <string name="switch_audio">Switch\naudio</string>
    <string name="set_time_as_end">Set time\nas end</string>
    <string name="pause_symbol">II</string>
    <string name="open_lan_subtitle_flat">Open LAN Subtitle</string>
    <string name="select_video_locally">Select video locally</string>
    <string name="select_video_on_lan">Select video on LAN</string>
    <string name="stream_from_http_address">Stream from HTTP address</string>
    <string name="none_selected">None Selected</string>
    <string name="play_current_video">Play current video</string>
    <string name="selected_video">Selected Video:</string>
    <string name="_0000">0000</string>
    <string name="_00">00</string>
    <string name="_000">000</string>
    <string name="shift_forwards">Shift\nforwards</string>
    <string name="shift_in_milliseconds">Shift in milliseconds</string>
    <string name="stretch_to_this_as_start_time">Stretch to this as start time</string>
    <string name="stretch_to_this_as_end_time">Stretch to this as ending time</string>
    <string name="change_end_time">Change end time</string>
    <string name="change_start_time">Change start time</string>
    <string name="shift_backwards">Shift\nbackwards</string>
    <string name="time_separate">:</string>
    <string name="shift_stretch_subtitle">Shift / Stretch Subtitle</string>
    <string name="edit_individual_subtitles">Edit individual subtitles</string>
    <string name="play_sync_with_video">Play/Sync with video</string>
    <string name="sync_by_frame_rate">Sync by frame rate</string>
    <string name="sync_with_other_subtitle">Sync with other subtitle</string>
    <string name="save_subtitle">Save subtitle</string>
    <string name="convert">Convert</string>
    <string name="_24">24</string>
    <string name="_23_975">23.975</string>
    <string name="_25">25</string>
    <string name="_30">30</string>
    <string name="_29_975">29.975</string>
    <string name="current_frame_rate">Current frame rate</string>
    <string name="chosen_factor">Chosen factor:</string>
    <string name="new_frame_rate">New frame rate</string>
    <string name="jump_to_start_time">Jump to\nFirst</string>
    <string name="jump_to_end_time">Jump to\nLast</string>
    <string name="set_time_as_end2">Set time\nas end</string>
    <string name="scroll_down">Scroll\ndown</string>
    <string name="scroll_up">Scroll\nUp</string>
    <string name="search">Search</string>
    <string name="filename">Filename</string>
    <string name="some_text">Some Text</string>
    <string name="custom">Custom</string>
    <string name="loading">Loading…</string>
    <string name="free_space">Free space:</string>
    <string name="gb">GB</string>
    <string name="question_mark">\?</string>
    <string name="please_enter_a_valid_number">Please enter a valid number</string>
    <string name="subtitle_has_been_synced_to">The subtitle has been synced to %1$s frames per second.</string>
    <string name="a_error_has_occurred">An error has occurred</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="switched_to_audio_track">Switched to Audio track</string>
    <string name="all_color_codes_reset_to_white">All HTML color codes reset to white.</string>
    <string name="current_selected_charset">Current selected charset:</string>
    <string name="change">Change</string>
    <string name="delete_this_subtitle">Delete this subtitle?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_a_frame_rate">Pick a frame rate</string>
    <string name="editor_only_works_with_sub_and_srt">This editor only works with .srt and .sub files.</string>
    <string name="do_you_want_the_first_line_to_sync_with">Do you want the first line to sync with</string>
    <string name="do_you_want_the_last_line_to_sync_with">Do you want the last line to sync with</string>
    <string name="overwrite">Overwrite</string>
    <string name="save_as">Save as</string>
    <string name="open">Open</string>
    <string name="enter_url">Enter URL</string>
    <string name="not_a_valid_lan_location">This is not a valid LAN Location</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="try_credentials">Try Credentials</string>
    <string name="add_underline"><u>Add Underline</u></string>
    <string name="chosen_color">Chosen color:</string>
    <string name="add_italics">Add\nItalics</string>
    <string name="add_boldness">Add\nBoldness</string>
    <string name="add_color">Add\nColor</string>
    <string name="edit_raw_text">Edit Raw Text</string>
    <string name="reset_styling">Reset\nStyling</string>
    <string name="add_underline_button">Add\nUnderline</string>
    <string name="all_markup_removed">All markup removed.</string>
    <string name="apply_markup">Do you want to apply this markup? All old markup will be deleted.</string>
    <string name="choose_color">Choose color</string>
    <string name="FragmentNewPlayer">In this screen, you can sync a subtitle with a video. In the bottom of the screen are two subtitles: the first line and the last line of the subtitle are default. With "Choose Other" you can select different ones. Use Jump to Start or Jump to End to jump to time when they appear.\n\nTo sync a subtitle, move the video to where the first or last subtitle should appear. With the "1-", "0.1-", "0.1+" and "1+" buttons you can fine tune this position. When you are sure that the subtitle line matches the time, select "Set Time as Start" or "Set Time as End" buttons. \n\nAfter you have set the first and last subtitle positions, select "Reload Subtitle". The new subtitle is now being used in the video. You can fine tune the position further after that.</string>
    <string name="FragmentShiftStretch">In this screen you can stretch or shift a subtitle. To Shift, use the bottom two fields to shift forwards or backwards.\n\nTo stretch the subtitle, enter a new starting or ending time. </string>
    <string name="FragmentSyncWithOtherSub">In this screen you can synchronize a subtitle with another subtitle. In order to synchronize, you will need a subtitle which matches the video perfectly, but has different subtitles, usually from a different language. \n\nFirst, select the subtitle to synchronize with. Select two subtitle lines from this subtitle, the first and last subtitle lines are used as default. Then, select the matching subtitle lines from the original. Press sync and the whole subtitle will synchronize with the chosen timecodes.</string>
    <string name="FragmentSyncByFrameRate">sync by frame rate help</string>
    <string name="FragmentEditSingle">In this screen, you can style, shift and change the length of an individual subtitle. \n\nTo shift, use one of the four buttons at the bottom. \n\nUse the "Shorten" and "Lengthen" buttons to change the display time of the line. \n\nIf you want to add styling to letters or separate words, select them and then apply the style.</string>
    <string name="restore_last_session">Resume last session</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_all_markup_in_subtitle">Remove all markup in subtitle</string>
    <string name="create_markup_for_entire_subtitle">Create markup for entire subtitle</string>
    <string name="refresh">Refresh</string>
    <string name="check_free_space">Check\nfree space</string>
    <string name="_000000">000000</string>
    <string name="colon">:</string>
    <string name="stretch_to_new_times">Stretch to New Times</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="help">help</string>
    <string name="choose_a_frame_rate">Choose a frame rate:</string>
    <string name="enter_frame_rate">Enter frame rate</string>
    <string name="choose_color_menu">Choose color menu</string>
</resources>