<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="?attr/colorSecondaryVariant"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="20dp"

        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/chose_frame_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/choose_a_frame_rate" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:id="@+id/radio_frame_rate"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/_23_975"
                android:id="@+id/f23.975"
                android:checked="false"
                android:textSize="18sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/_24"
                android:id="@+id/f24"
                android:checked="false"
                android:textSize="18sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/_25"
                android:id="@+id/f25"
                android:checked="true"
                android:textSize="18sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/_29_975"
                android:id="@+id/f29.975"
                android:textSize="18sp"
                android:checked="false" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/_30"
                android:id="@+id/f30"
                android:textSize="18sp"
                android:checked="false" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:textSize="18sp"
                android:text="@string/custom"
                android:id="@+id/custom_frame_rate"
                android:checked="false">
            </RadioButton>
            <EditText
                android:id="@+id/frame_rate_edit"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:ems="10"
                android:textColorHint="?android:attr/colorPrimaryDark"
                android:hint="@string/enter_frame_rate"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.15"
        android:padding="20dp"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:letterSpacing="0.15"
        android:padding="20dp"
        android:text="@string/help"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button" />
</androidx.constraintlayout.widget.ConstraintLayout>