<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:background="?attr/colorSecondaryVariant"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/underlineCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_underline" />

        <CheckBox
            android:id="@+id/italicsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_italics"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/boldnessCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_boldness"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/colorCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_color" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chosen_color" />

        <TextView
            android:id="@+id/selected_color"
            style="?android:attr/buttonStyle"
            android:layout_width="140dp"
            android:contentDescription="@string/choose_color_menu"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_regular"
            android:backgroundTint="@color/black" />


    </LinearLayout>

    <TextView
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.15"
        android:padding="20dp"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.15"
        android:padding="20dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>