<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_subtitle"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:minWidth="270dp"
        android:text="@string/view_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/edit_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/edit_subtitle"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:minWidth="270dp"
        android:text="@string/edit_individual_subtitles"
        app:layout_constraintBottom_toTopOf="@+id/shift_stretch_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/shift_stretch_subtitle"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:minWidth="270dp"
        android:text="@string/shift_stretch_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/select_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/select_video"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"

        android:minWidth="270dp"
        android:text="@string/select_video"
        app:layout_constraintBottom_toTopOf="@+id/play_with_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/play_with_video"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:minWidth="270dp"
        android:layout_marginBottom="55dp"
        android:text="@string/play_sync_with_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/sync_by_frame_rate"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:minWidth="270dp"
        android:text="@string/sync_by_frame_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_with_video" />

    <TextView
        android:id="@+id/sync_with_other_subtitle"

        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:minWidth="270dp"
        android:text="@string/sync_with_other_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sync_by_frame_rate" />

    <TextView
        android:id="@+id/advanced"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:minWidth="270dp"
        android:text="@string/advanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sync_with_other_subtitle" />

    <TextView
        android:id="@+id/save_subtitle"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:minWidth="270dp"
        android:text="@string/save_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced" />

    <FrameLayout
        android:id="@+id/reload_toolbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:background="@drawable/icon_reload"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck">

        <TextView
            android:id="@+id/reload_toolbar_action_background"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/reload_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
